manifests/ingress/avalon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avalon-ingress
#  labels:
#    app: gamelogic
spec:
  rules:
    - http:
        paths:
          - path: /playground
            pathType: Prefix
            backend:
              service:
                name: avalon-emailhandler
                port:
                  number: 8080
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: gamelogic
                port:
                  number: 80

    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avalon-emailhandler
                port:
                  number: 80
